<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_insights"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_insights" />
    <item
        android:id="@+id/nav_activity"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_activity" />
    <item
        android:id="@+id/nav_files"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_files" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>

