<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:backgroundTint="@color/rp_surface"
    app:cardCornerRadius="18dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <ImageView
            android:id="@+id/ivRepoIcon"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/repo_icon"
            android:src="@android:drawable/ic_menu_agenda"
            android:tint="@color/rp_neon_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/repo_react"
            android:textColor="@color/rp_text_primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivRepoIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRepoBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_badge_healthy"
            android:paddingStart="9dp"
            android:paddingTop="3dp"
            android:paddingEnd="9dp"
            android:paddingBottom="3dp"
            android:text="@string/status_healthy"
            android:textColor="@color/rp_status_healthy"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvRepoName"
            app:layout_constraintStart_toEndOf="@id/tvRepoName"
            app:layout_constraintTop_toTopOf="@id/tvRepoName" />

        <TextView
            android:id="@+id/tvRepoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/analyzed_2h"
            android:textColor="@color/rp_text_muted"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/ivRepoIcon"
            app:layout_constraintTop_toBottomOf="@id/tvRepoName" />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/open_repo"
            android:src="@android:drawable/ic_media_next"
            android:tint="@color/rp_text_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

